update eureka config by tylerchen

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -20,6 +20,7 @@
 ###------------------------------------------------------------------------------------------##
 
 # APPLICATION SETTINGS (SpringApplication)
+spring.application.name=foss-qdp-registry
 #logging.level.org.springframework=DEBUG
 spring.main.sources=classpath:META-INF/spring/root.xml
 
@@ -35,6 +36,7 @@ server.tomcat.uri-encoding=UTF-8
 #server.port=8080
 
 server.port=9200
+###----------------Eureka----------------###
 #eureka issue:http://blog.csdn.net/lc0817/article/details/54375802
 #指定数据中心
 eureka.datacenter=foss-qdp-registry
@@ -51,7 +53,10 @@ eureka.dashboard.path=/eurekaui
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=false
 eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
-
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=${spring.cloud.client.ipAddress}
+eureka.instance.instanceId=${spring.cloud.client.ipAddress}:${spring.application.name}:${spring.application.instance_id:${server.port}}
+###----------------Eureka END----------------###
 
 # consul register provider, to add @EnableDiscoveryClient enable register.
 #spring.application.name=Consul-Server-1
