--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -39,7 +39,7 @@ server.port=9200
 ###----------------Eureka----------------###
 #eureka issue:http://blog.csdn.net/lc0817/article/details/54375802
 #指定数据中心
-eureka.datacenter=foss-qdp-registry
+eureka.datacenter=FOSS
 #Eureka Server端：配置关闭自我保护，并按需配置Eureka Server清理无效节点的时间间隔。
 #eureka.server.enable-self-preservation # 设为false，关闭自我保护
 #eureka.server.eviction-interval-timer-in-ms # 清理间隔（单位毫秒，默认是60*1000）
