--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -54,6 +54,8 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=false
 eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
 eureka.instance.prefer-ip-address=true
+#指定使用哪个网段(哪个网卡出去)
+#spring.cloud.inetutils.preferred-networks=120.26.
 eureka.instance.hostname=${spring.cloud.client.ipAddress}
 eureka.instance.instanceId=${spring.cloud.client.ipAddress}:${spring.application.name}:${spring.application.instance_id:${server.port}}
 ###----------------Eureka END----------------###
