--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -36,6 +36,15 @@ server.tomcat.uri-encoding=UTF-8
 #server.port=8080
 
 server.port=9200
+
+
+###----------------Zipkin----------------###
+spring.zipkin.baseUrl=http://localhost:9300
+spring.zipkin.enabled=true
+spring.sleuth.sampler.percentage=1.0
+###----------------Zipkin END----------------###
+
+
 ###----------------Eureka----------------###
 #eureka issue:http://blog.csdn.net/lc0817/article/details/54375802
 #指定数据中心
