--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -37,6 +37,44 @@ server.tomcat.uri-encoding=UTF-8
 
 server.port=9200
 
+###----------------LOG----------------###
+#springboot默认的日志级别是info
+#可以通过logging.level.*=debug 来设置， * 可以是包，也可以是某个类
+# 日志级别有：TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
+# 日志级别配置成OFF，表示关闭日志输出
+# logging.file 指定日志文件名字
+# logging.path 指定日志目录（此时的日志名字为spring.log）
+# 日志文件输出，文件的大小10M之后，就会分割了
+# logging.pattern.console 配置控制台输出日志的pattern
+# logging.file.console 配置日志文件输出日志的pattern
+# springboot默认支持logback, 也就是说，只需要在classptah下放一个logback.xml,logback-spring.xml的文件，即可定制日志的输出
+# 使用其他的日志组件的步骤
+# 1：排除掉默认的日志组件：spring-boot-starter-logging
+# 2：加入新的日志路径依赖
+# 3：把相应的配置文件放到classpath下
+
+# LOGGING
+#logging.config= # Location of the logging configuration file. For instance, `classpath:logback.xml` for Logback.
+logging.config=classpath:logback-spring.xml
+#logging.exception-conversion-word=%wEx # Conversion word used when logging exceptions.
+#logging.file= # Log file name (for instance, `myapp.log`). Names can be an exact location or relative to the current directory.
+logging.file=${spring.application.name}.log
+#logging.file.max-history=0 # Maximum of archive log files to keep. Only supported with the default logback setup.
+#logging.file.max-size=10MB # Maximum log file size. Only supported with the default logback setup.
+#logging.level.*= # Log levels severity mapping. For instance, `logging.level.org.springframework=DEBUG`.
+logging.level.root=INFO
+logging.level.SystemAuth=DEBUG
+logging.level.FOSS=DEBUG
+#logging.path= # Location of the log file. For instance, `/var/log`.
+#logging.pattern.console= # Appender pattern for output to the console. Supported only with the default Logback setup.
+logging.pattern.console=%clr(%traceid) %clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx
+#logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS # Appender pattern for log date format. Supported only with the default Logback setup.
+#logging.pattern.file= # Appender pattern for output to a file. Supported only with the default Logback setup.
+logging.pattern.file=%traceid %d{yyyy-MM-dd HH:mm:ss.SSS} %5p ${PID:- } --- [%t] %-40.40logger{39} : %m%n%wEx
+#logging.pattern.level=%5p # Appender pattern for log level. Supported only with the default Logback setup.
+#logging.register-shutdown-hook=false # Register a shutdown hook for the logging system when it is initialized.
+###----------------LOG END----------------###
+
 
 ###----------------Zipkin----------------###
 spring.zipkin.baseUrl=http://localhost:9300
