fix rest issue by tylerchen

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -102,7 +102,7 @@ eureka.client.fetch-registry=false
 eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
 eureka.instance.prefer-ip-address=true
 #指定使用哪个网段(哪个网卡出去)
-#spring.cloud.inetutils.preferred-networks=120.26.
+spring.cloud.inetutils.preferred-networks=120.
 eureka.instance.hostname=${spring.cloud.client.ipAddress}
 eureka.instance.instanceId=${spring.cloud.client.ipAddress}:${spring.application.name}:${spring.application.instance_id:${server.port}}
 ###----------------Eureka END----------------###
