fix zuul auth by tylerchen

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -90,7 +90,7 @@ eureka.datacenter=FOSS
 #Eureka Server端：配置关闭自我保护，并按需配置Eureka Server清理无效节点的时间间隔。
 #eureka.server.enable-self-preservation # 设为false，关闭自我保护
 #eureka.server.eviction-interval-timer-in-ms # 清理间隔（单位毫秒，默认是60*1000）
-eureka.server.enable-self-preservation=false
+eureka.server.enable-self-preservation=true
 #Eureka Client端：配置开启健康检查，并按需配置续约更新时间和到期时间。
 #eureka.client.healthcheck.enabled # 开启健康检查（需要spring-boot-starter-actuator依赖）
 #eureka.instance.lease-renewal-interval-in-seconds # 续约更新时间间隔（默认30秒）
@@ -102,7 +102,7 @@ eureka.client.fetch-registry=false
 eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
 eureka.instance.prefer-ip-address=true
 #指定使用哪个网段(哪个网卡出去)
-spring.cloud.inetutils.preferred-networks=120.
+#spring.cloud.inetutils.preferred-networks=120.
 eureka.instance.hostname=${spring.cloud.client.ipAddress}
 eureka.instance.instanceId=${spring.cloud.client.ipAddress}:${spring.application.name}:${spring.application.instance_id:${server.port}}
 ###----------------Eureka END----------------###
