fix zuul auth by tylerchen

--- a/src/main/resources/META-INF/config/access-ip.properties
+++ b/src/main/resources/META-INF/config/access-ip.properties
@@ -2,4 +2,5 @@
 ####
 #  shiro access ip for webservice
 ####
-access.ip=0:0:0:0:0:0:0:*,127.0.0.*
+#access.ip=0:0:0:0:0:0:0:*,127.0.0.*
+access.ip=
