fix zuul auth by tylerchen

--- a/src/main/resources/META-INF/config/authorization.properties
+++ b/src/main/resources/META-INF/config/authorization.properties
@@ -9,7 +9,7 @@ auth.account.json=[ \
 			"id"           :"1", \
 			"loginId"      :"admin@admin.com", \
 		 	"loginPasswd"  :"123456", \
-		 	"roles"        :["AMIND","USER"], \
+		 	"roles"        :["ADMIN","USER"], \
 		 	"resources"    :["*"], \
 		 	"organizations":["ORG"], \
 		 	"menus"        :[ \
