fix shiro auth by tylerchen

--- a/src/main/resources/META-INF/config/shiro.properties
+++ b/src/main/resources/META-INF/config/shiro.properties
@@ -2,12 +2,12 @@
 ####
 #  Unauthorized redirect to url. @seecom.foreveross.common.shiro.ShiroAccessControlFilter
 ####
-shiro.redirect.unauthorized.url=/zipkin/;/zipkin/*
+shiro.redirect.unauthorized.url=/zipkin/;/zipkin/*;/eurekaui/*
 shiro.redirect.to.url=/index.html
 ####
 #  this urls will skip when auth
 ####
-shiro.skipUrls=/;/index.html;/monitor/*.js;/monitor/*.css;/monitor/*.html;
+shiro.skipUrls=/;/index.html;/monitor/*.js;/monitor/*.css;/monitor/*.html;/eureka/css/*;/eureka/fonts/*;/eureka/images/*;/eureka/js/*;
 ####
 #  filterChainDefinitions. @see /src/main/resources/META-INF/spring-auth/spring-shiro.xml
 ####
