upgrade to version 2.0.0 by tylerchen

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -33,9 +33,14 @@ spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
-#server.port=8080
-
 server.port=9200
+
+###----------------Swagger2----------------###
+springfox.documentation.swagger2.enable=true
+springfox.documentation.swagger2.basePackage=com.foreveross.qdp
+#springfox.documentation.swagger.v2.path=
+#springfox.documentation.auto-startup=true
+###----------------Swagger2 END----------------###
 
 ###----------------LOG----------------###
 #springboot默认的日志级别是info
