--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.foreveross</groupId>
     <artifactId>foss-qdp-registry-project</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
     <packaging>war</packaging>
     <name>${project.groupId}-${project.artifactId}-${project.version}</name>
     <description>
@@ -137,7 +137,7 @@
         <dependency>
             <groupId>org.iff</groupId>
             <artifactId>tc-util-project</artifactId>
-            <version>1.0.26</version>
+            <version>1.0.27</version>
         </dependency>
         <!-- iff infra end -->
         <!-- javax.servlet -->
@@ -327,7 +327,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>18.0</version>
+            <version>23.6.1-jre</version>
         </dependency>
 
         <dependency>
@@ -594,13 +594,14 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.7.0</version>
+            <version>2.9.2</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.7.0</version>
+            <version>2.9.2</version>
         </dependency>
+        <!--SpringFox dependencies END -->
         <!-- <dependency> <groupId>org.springframework.cloud</groupId> <artifactId>spring-cloud-starter-consul-discovery</artifactId>
             </dependency> -->
     </dependencies>
