upgrade redirec path by tylerchen

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -110,6 +110,7 @@ eureka.instance.prefer-ip-address=true
 #spring.cloud.inetutils.preferred-networks=120.
 eureka.instance.hostname=${spring.cloud.client.ipAddress}
 eureka.instance.instanceId=${spring.cloud.client.ipAddress}:${spring.application.name}:${spring.application.instance_id:${server.port}}
+eureka.instance.statusPageUrlPath=http://${spring.cloud.client.ipAddress}:${server.port}/swagger-ui.html
 ###----------------Eureka END----------------###
 
 # consul register provider, to add @EnableDiscoveryClient enable register.
